--- a/charts/local-kubevirt/Chart.yaml
+++ b/charts/local-kubevirt/Chart.yaml
@@ -14,9 +14,9 @@
 
 apiVersion: v1
 name: kubevirt
-version: v1.0.0-alpha.0
-appVersion: v1.0.0-alpha.0
-description: KubeVirt chart for KKP local installation
+version: v1.0.0-beta.0
+appVersion: v1.0.0-beta.0
+description: KubeVirt chart for KKP local installation 
 keywords:
   - kubermatic
   - kubevirt
