--- a/charts/local-kubevirt/crds/customresourcedefinition-kubevirts.kubevirt.io.yaml
+++ b/charts/local-kubevirt/crds/customresourcedefinition-kubevirts.kubevirt.io.yaml
@@ -118,6 +118,47 @@ spec:
                               type: object
                           type: object
                       type: object
+                    architectureConfiguration:
+                      properties:
+                        amd64:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                        arm64:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                        defaultArchitecture:
+                          type: string
+                        ppc64le:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                      type: object
                     controllerConfiguration:
                       description: ReloadableComponentConfiguration holds all generic k8s configuration options which can be reloaded by components without requiring a restart.
                       properties:
@@ -269,7 +310,7 @@ spec:
                           x-kubernetes-list-type: atomic
                         nodeMediatedDeviceTypes:
                           items:
-                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specific node that matches the NodeSelector field.
+                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specifc node that matches the NodeSelector field.
                             properties:
                               mediatedDeviceTypes:
                                 items:
@@ -309,7 +350,7 @@ spec:
                           anyOf:
                             - type: integer
                             - type: string
-                          description: BandwidthPerMigration limits the amount of network bandwidth live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
+                          description: BandwidthPerMigration limits the amount of network bandwith live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
                         completionTimeoutPerGiB:
@@ -1644,6 +1685,8 @@ spec:
                       - type
                     type: object
                   type: array
+                defaultArchitecture:
+                  type: string
                 generations:
                   items:
                     description: GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made.
@@ -1706,7 +1749,7 @@ spec:
             - spec
           type: object
       served: true
-      storage: false
+      storage: true
       subresources:
         status: {}
     - additionalPrinterColumns:
@@ -1716,6 +1759,8 @@ spec:
         - jsonPath: .status.phase
           name: Phase
           type: string
+      deprecated: true
+      deprecationWarning: kubevirt.io/v1alpha3 is now deprecated and will be removed in a future release.
       name: v1alpha3
       schema:
         openAPIV3Schema:
@@ -1796,6 +1841,47 @@ spec:
                               type: object
                           type: object
                       type: object
+                    architectureConfiguration:
+                      properties:
+                        amd64:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                        arm64:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                        defaultArchitecture:
+                          type: string
+                        ppc64le:
+                          properties:
+                            emulatedMachines:
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                            machineType:
+                              type: string
+                            ovmfPath:
+                              type: string
+                          type: object
+                      type: object
                     controllerConfiguration:
                       description: ReloadableComponentConfiguration holds all generic k8s configuration options which can be reloaded by components without requiring a restart.
                       properties:
@@ -1947,7 +2033,7 @@ spec:
                           x-kubernetes-list-type: atomic
                         nodeMediatedDeviceTypes:
                           items:
-                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specific node that matches the NodeSelector field.
+                            description: NodeMediatedDeviceTypesConfig holds information about MDEV types to be defined in a specifc node that matches the NodeSelector field.
                             properties:
                               mediatedDeviceTypes:
                                 items:
@@ -1987,7 +2073,7 @@ spec:
                           anyOf:
                             - type: integer
                             - type: string
-                          description: BandwidthPerMigration limits the amount of network bandwidth live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
+                          description: BandwidthPerMigration limits the amount of network bandwith live migrations are allowed to use. The value is in quantity per second. Defaults to 0 (no limit)
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
                         completionTimeoutPerGiB:
@@ -3322,6 +3408,8 @@ spec:
                       - type
                     type: object
                   type: array
+                defaultArchitecture:
+                  type: string
                 generations:
                   items:
                     description: GenerationStatus keeps track of the generation for a given resource so that decisions about forced updates can be made.
@@ -3384,6 +3472,6 @@ spec:
             - spec
           type: object
       served: true
-      storage: true
+      storage: false
       subresources:
         status: {}
