--- a/pkg/resources/test/fixtures/deployment-azure-1.25.0-azure-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-azure-1.25.0-azure-cloud-controller-manager-externalCloudProvider.yaml
@@ -44,7 +44,7 @@ spec:
           httpGet:
             path: /healthz
             port: 10258
-            scheme: HTTP
+            scheme: HTTPS
           initialDelaySeconds: 20
           periodSeconds: 10
           successThreshold: 1
