--- a/pkg/resources/test/fixtures/deployment-openstack-1.27.0-machine-controller.yaml
+++ b/pkg/resources/test/fixtures/deployment-openstack-1.27.0-machine-controller.yaml
@@ -102,7 +102,7 @@ spec:
               fieldPath: metadata.namespace
         - name: PROBER_KUBECONFIG
           value: /etc/kubernetes/kubeconfig/kubeconfig
-        image: quay.io/kubermatic/machine-controller:bfd2fd7cf54150606466e64831e366b923336e0d
+        image: quay.io/kubermatic/machine-controller:v1.57.0
         livenessProbe:
           failureThreshold: 3
           httpGet:
