--- a/cmd/user-ssh-keys-agent/Dockerfile.multiarch
+++ b/cmd/user-ssh-keys-agent/Dockerfile.multiarch
@@ -14,7 +14,7 @@
 
 FROM docker.io/golang:1.20.5 as builder
 
-# import the GOPROXY variable from Buildah via an arg and then use
+# import the GOPROXY variable via an arg and then use
 # that arg to define the environment variable later on
 ARG GOPROXY=
 ARG GOCACHE=
